# naorm_macro

./: Cargo.toml  README.md
src/: lib.rs  table_create.rs
tests/: mystruct.rs
