[package]
name = "naorm_macro"
version = "0.1.0"
edition = "2024"
description = "A lightweight ORM derive macro built on top of **sqlx**. It generates SQL constants and helper query builders for your structs, so you can keep SQL centralized while still using `sqlx` types."
license = "MIT OR Apache-2.0"
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
once_cell = "1.21.3"
proc-macro-error = "1.0.4"
proc-macro-crate = "1.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros","any","sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = {version="1.48.0",features= ["full"] }
